--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
             <div class="logo" >
                 <img src="./assets/img/logo.png" alt="">
+                <p class="nav-text">Lobastyle</p>
             </div>
 
     <!--Menú de navegación-->
